fix form text filed overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -1464,6 +1464,10 @@ input[type=email]:placeholder-shown {
 }
 
 @media screen and (max-width: 60em) {
+  input[type=text],
+  input[type=email] {
+    width: 100%;
+  }
   .rss-subscribe {
     margin: 0;
     margin-bottom: calc(var(--PAD-L) * 3);
